# td-monitor

./: .gitignore  README.md  pyproject.toml
src/authent/: admin.py  models.py
src/authent/migrations/: 0001_initial.py
src/companies/: admin.py  models.py
src/companies/migrations/: 0001_initial.py  0002_auto_20210322_0745.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: base.py
