[tool.poetry]
name = "td-companion"
version = "0.1.0"
description = ""
authors = ["Laurent Paoletti <lp@providenz.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-model-utils = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
